Move search components into extension-selenium for further reusage