@@ -17,24 +17,30 @@
 package org.vividus.spring;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.mockito.Mockito.when;
 
-import java.util.Arrays;
-import java.util.HashSet;
 import java.util.Set;
 
 import org.junit.jupiter.api.Test;
-import org.vividus.ui.web.action.search.ActionAttributeType;
-import org.vividus.ui.web.action.search.SearchAttributes;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
+import org.vividus.ui.action.search.SearchAttributes;
+import org.vividus.ui.util.SearchAttributesConversionUtils;
 
+@ExtendWith(MockitoExtension.class)
 class StringToSearchAttributesSetConverterTests
 {
-    private final StringToSearchAttributesSetConverter converter = new StringToSearchAttributesSetConverter();
+    @Mock private SearchAttributesConversionUtils conversionUtils;
+    @Mock private SearchAttributes searchAttributes;
+    @InjectMocks private StringToSearchAttributesSetConverter converter;
 
     @Test
     void testConvert()
     {
-        Set<SearchAttributes> expectedSet = new HashSet<>(Arrays.asList(new SearchAttributes(
-                ActionAttributeType.ID, "id"), new SearchAttributes(ActionAttributeType.CSS_SELECTOR, "#id")));
-        assertEquals(expectedSet, converter.convert("By.id(id), By.cssSelector(#id)"));
+        String locator = "locator";
+        when(conversionUtils.convertToSearchAttributesSet(locator)).thenReturn(Set.of(searchAttributes));
+        assertEquals(Set.of(searchAttributes), converter.convert(locator));
     }
 }
